add redis publish and subscribe
