# docs/swagger.json
@@ -19,6 +19,15 @@
                 }
             }
         },
+        "/message/sendMessage": {
+            "get": {
+                "tags": [
+                    "Message"
+                ],
+                "summary": "SendMessage",
+                "responses": {}
+            }
+        },
         "/user/createUser": {
             "post": {
                 "tags": [
